Script: Add section background image.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-  
+  <div class="container-fluid">
+    <section class="header d-flex flex-column justify-content-around">
+      
+    </section>
+  </div>
  
   <script src="JS/main.js"></script>
 </body>
