Ft: Add section text and style using bootstrap.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 <body>
   <div class="container-fluid">
     <section class="header d-flex flex-column justify-content-around">
-      
+      <div class="message d-flex flex-column">
+        <img src="Assets/logo/logo.png" alt="Logo" class="mx-auto d-block">
+        <p class="fs-1 text-light text-center">WELCOME</p>
+        <P class="fs-1 text-light text-center">TO DELANI STUDIO</P>
+        <p class="text-uppercase text-light text-center">Amazing people are making amazing designs in a fun environment</p>
+      </div>
+      <div class="mouse d-flex align-items-bottom">
+        <img src="Assets/mouse_click.png" alt="Click" class="mx-auto d-block">
+      </div>
     </section>
   </div>
  
