Ft: Add about section.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,19 @@
         <p class="text-uppercase text-light text-center">Amazing people are making amazing designs in a fun environment</p>
       </div>
       <div class="mouse d-flex align-items-bottom">
-        <img src="Assets/mouse_click.png" alt="Click" class="mx-auto d-block">
+        <a href="#about" class="mx-auto d-block"><img src="Assets/mouse_click.png" alt="Click"></a>
+      </div>
+    </section>
+    <section class="about">
+      <div class="info" id="about">
+        <h2 class="fw-bold fs-3 text-center">ABOUT US</h2>
+        <p class="text-center">When you work with us, you are part of the team of committed collaborators. All aspects of our software development precess are intergrated, interactive <br>and agile.</p>
+        <p class="text-center">Our approach unifies design, development and product management to create exceptional products.</p>
+        <p class="text-center">We start each project by understanding your business goals, the user's needs and the product requirements</p>
+        <p class="text-center">Then we help translate them into effective and elegant solutions.</p>
       </div>
     </section>
   </div>
- 
   <script src="JS/main.js"></script>
 </body>
 </html>
