--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
       </div>
     </section>
     <section class="services">
-      <div class="wording">
-        
+      <div class="words">
+        <h2 class="fw-bold fs-3 text-center text-light">SERVICES</h2>
+        <p>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision</p>
+        <p>The outcome of this scoping session is proposal or high-level statement of work.</p>
+        <p>based on your requirements, we can provide a complete offering or just the pieces you need.</p>
       </div>
     </section>
   </div>
