Ft: Add what we do section.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,29 @@
         <p class="text-center text-light">based on your requirements, we can provide a complete offering or just the pieces you need.</p>
       </div>
     </section>
+    <section class="do mt-5">
+      <div class="what">
+        <h2 class="text-center fs-3">WHAT WE DO</h2>
+        <div class="row">
+          <div class="toggle col-lg-3">
+            <div class="paragraph">
+              <h3 class="text-center">DESIGN</h3>
+              <P>
+                Our design practice offers a full range of services including brand strategy,
+                interaction and visual design and user experience testing.
+              </P>
+              <p>
+                Throughout your project, our designers create and implement visual design and workflows,
+                solicit user feedback and work with you to make sure what gets built is what is needed.
+              </p>
+            </div>
+            <div class="icon">
+              <img src="Assets/services_icons/design_icon.png" alt="Icon">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
   <script src="JS/main.js"></script>
 </body>
