--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@
     </section>
     <section class="do mt-5">
       <div class="what">
-        <h2 class="text-center fs-3">WHAT WE DO</h2>
+        <h2 class="text-center fs-2">WHAT WE DO</h2>
         <div class="row">
           <div class="toggle col-lg-3">
-            <div class="paragraph">
-              <h3 class="text-center">DESIGN</h3>
-              <P>
-                Our design practice offers a full range of services including brand strategy,
-                interaction and visual design and user experience testing.
-              </P>
-              <p>
-                Throughout your project, our designers create and implement visual design and workflows,
-                solicit user feedback and work with you to make sure what gets built is what is needed.
-              </p>
-            </div>
-            <div class="icon">
-              <img src="Assets/services_icons/design_icon.png" alt="Icon">
-            </div>
+              <div class="paragraph d-none">
+                <h3 class="text-center fs-3">DESIGN</h3>
+                <P class="text-center">
+                  Our design practice offers a full range of services including brand strategy,
+                  interaction and visual design and user experience testing.
+                </P>
+                <p class="text-center">
+                  Throughout your project, our designers create and implement visual design and workflows,
+                  solicit user feedback and work with you to make sure what gets built is what is needed.
+                </p>
+              </div>
+              <div class="icon">
+                <img src="Assets/services_icons/design_icon.png" alt="Icon" class="mx-auto d-block">
+              </div>           
           </div>
         </div>
       </div>
