Ft: style what we do section via bootstrap.

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <section class="do mt-5">
       <div class="what">
         <h2 class="text-center fs-2">WHAT WE DO</h2>
-        <div class="row">
+        <div class="row justify-content-around">
           <div class="toggle col-lg-3">
-              <div class="paragraph d-none">
+              <div class="paragraph d-none mt-3">
                 <h3 class="text-center fs-3">DESIGN</h3>
                 <P class="text-center">
                   Our design practice offers a full range of services including brand strategy,
@@ -56,10 +56,45 @@
                   solicit user feedback and work with you to make sure what gets built is what is needed.
                 </p>
               </div>
-              <div class="icon">
+              <div class="icon mt-3">
                 <img src="Assets/services_icons/design_icon.png" alt="Icon" class="mx-auto d-block">
+                <p class="text-center">DESIGN</p>
               </div>           
           </div>
+          <div class="toggle col-lg-3">
+            <div class="paragraph d-none mt-3">
+              <h3 class="text-center fs-3">DEVELOPMENT</h3>
+              <P class="text-center">
+                All engineers are fluent in the latest enterprise, mobile and web development technologies.
+              </P>
+              <p class="text-center">
+                They collaborate with your team to write and implement and improve
+                code on a daily basis,using proven practices such as
+                test driven development and pair programming
+              </p>
+            </div>
+            <div class="icon mt-3">
+              <img src="Assets/services_icons/dev_icon.png" alt="Icon" class="mx-auto d-block">
+              <p class="text-center">DEVELOPMENT</p>
+            </div>           
+        </div>
+        <div class="toggle col-lg-3">
+          <div class="paragraph d-none mt-3">
+            <h3 class="text-center fs-3">PRODUCT MANAGEMENT</h3>
+            <P class="text-center">
+              Planning and development is iterative. Because we are 
+              constantly coding and testing,the product we always build are
+              always ready to go live.
+            </P>
+            <p class="text-center">
+              This iterative process always for changes as business requirements evolve
+            </p>
+          </div>
+          <div class="icon mt-3">
+            <img src="Assets/services_icons/product_icon.png" alt="Icon" class="mx-auto d-block">
+            <p class="text-center">PRODUCT MANAGEMENT</p>
+          </div>           
+      </div>
         </div>
       </div>
     </section>
