Ft: add portfolio section title.

--- a/index.html
+++ b/index.html
@@ -100,8 +100,11 @@
     </section>
     <section class="portfolio">
       <div class="port">
+        <h2 class="text-center mt-4">PORTFOLIO</h2>
         <div class="row">
-          
+          <div class="col-lg-2">
+            <img src="" alt="">
+          </div>
         </div>
       </div>
     </section>
