Ft: Add portfolio first image.

--- a/index.html
+++ b/index.html
@@ -98,16 +98,27 @@
         </div>
       </div>
     </section>
-    <section class="portfolio">
-      <div class="port">
-        <h2 class="text-center mt-4">PORTFOLIO</h2>
-        <div class="row">
-          <div class="col-lg-2">
-            <img src="" alt="">
+    <div class="container">
+      <section class="portfolio">
+        <div class="port">
+          <h2 class="text-center mt-4">PORTFOLIO</h2>
+          <div class="row mt-3 justify-content-around">
+            <div class="col-lg-3">
+              <img src="Assets/portfolio/work4.jpg" alt="Work" class="w-100">
+            </div>
+            <div class="col-lg-3">
+              <img src="Assets/portfolio/work4.jpg" alt="Work" class="w-100">
+            </div>
+            <div class="col-lg-3">
+              <img src="Assets/portfolio/work4.jpg" alt="Work" class="w-100">
+            </div>
+            <div class="col-lg-3">
+              <img src="Assets/portfolio/work4.jpg" alt="Work" class="w-100">
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
   </div>
   <script src="JS/main.js"></script>
 </body>
