--- a/index.html
+++ b/index.html
@@ -102,21 +102,35 @@
       <section class="portfolio">
         <div class="port">
           <h2 class="text-center mt-4">PORTFOLIO</h2>
-          <div class="row mt-3 justify-content-around">
+          <div class="row justify-content-around">
             <div class="col-lg-3">
-              <img src="Assets/portfolio/work4.jpg" alt="Work" class="w-100">
+              <img src="Assets/portfolio/work4.jpg" alt="Work" class="w-100 mt-3">
             </div>
             <div class="col-lg-3">
-              <img src="Assets/portfolio/work3.jpg" alt="Work" class="w-100">
+              <img src="Assets/portfolio/work3.jpg" alt="Work" class="w-100 mt-3">
             </div>
             <div class="col-lg-3">
-              <img src="Assets/portfolio/work2.jpg" alt="Work" class="w-100">
+              <img src="Assets/portfolio/work2.jpg" alt="Work" class="w-100 mt-3">
             </div>
             <div class="col-lg-3">
-              <img src="Assets/portfolio/work1.jpg" alt="Work" class="w-100">
+              <img src="Assets/portfolio/work1.jpg" alt="Work" class="w-100 mt-3">
             </div>
           </div>
         </div>
+          <div class="row justify-content-around">
+            <div class="col-lg-3">
+              <img src="Assets/portfolio/work4.jpg" alt="Work" class="w-100 mt-3">
+            </div>
+            <div class="col-lg-3">
+              <img src="Assets/portfolio/work3.jpg" alt="Work" class="w-100 mt-3">
+            </div>
+            <div class="col-lg-3">
+              <img src="Assets/portfolio/work2.jpg" alt="Work" class="w-100 mt-3">
+            </div>
+            <div class="col-lg-3">
+              <img src="Assets/portfolio/work1.jpg" alt="Work" class="w-100 mt-3">
+            </div>
+          </div>
       </section>
     </div>
   </div>
