Ft-Style: Add and style form

--- a/index.html
+++ b/index.html
@@ -133,6 +133,26 @@
           </div>
       </section>
     </div>
+    <section class="form mt-5 d-flex flex-column justify-content-center item-align-center">
+      <div class="container">
+        <form action="Submit">
+          <h2 class="text-light text-center">CONTACT US</h2>
+          <div class="row">
+            <div class="col-lg-6">
+              <input type="text" placeholder="Name..." class="w-100 put" required>
+            </div>
+            <div class="col-lg-6">
+              <input type="email" placeholder="Email..." class="w-100 put" required>
+            </div>
+          </div>
+          <!-- <input type="textarea" placeholder="Your message here..." class="w-100 mx-auto d-block put" rows="10"> -->
+          <textarea class="form-control put mt-3" placeholder="Your message here..." id="floatingTextarea" rows="10" required></textarea>
+          <div class="text-center">
+            <button type="button" class="btn mt-3">SEND</button>
+          </div>
+        </form>
+      </div>
+    </section>
   </div>
   <script src="JS/main.js"></script>
 </body>
