--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
           <h2 class="text-light text-center">CONTACT US</h2>
           <div class="row">
             <div class="col-lg-6">
-              <input type="text" placeholder="Name..." class="w-100 put" required>
+              <input type="text" placeholder="Name..." class="w-100 put mt-3" required>
             </div>
             <div class="col-lg-6">
-              <input type="email" placeholder="Email..." class="w-100 put" required>
+              <input type="email" placeholder="Email..." class="w-100 put mt-3" required>
             </div>
           </div>
           <!-- <input type="textarea" placeholder="Your message here..." class="w-100 mx-auto d-block put" rows="10"> -->
@@ -153,6 +153,42 @@
         </form>
       </div>
     </section>
+    <div class="container">
+      <section class="social mt-3">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-lg-1">
+            <a href="#"><img src="Assets/social_icons/twitter.png" alt="Twitter" class="mx-auto d-block"></a>
+          </div>
+          <div class="col-lg-1">
+            <a href="#"><img src="Assets/social_icons/dribble.png" class="mx-auto d-block" alt="Dribble"></a>
+          </div>
+          <div class="col-lg-1">
+            <a href="#"><img src="Assets/social_icons/facebook.png" class="mx-auto d-block" alt="Facebook"></a>
+          </div>
+          <div class="col-lg-1">
+            <a href="#"><img src="Assets/social_icons/g_plus.png" class="mx-auto d-block" alt="Gmail"></a>
+          </div>
+          <div class="col-lg-1">
+            <a href="#"><img src="Assets/social_icons/skype.png" class="mx-auto d-block" alt="Skype"></a>
+          </div>
+          <div class="col-lg-1">
+            <a href="#"><img src="Assets/social_icons/stumble_upon.png" class="mx-auto d-block" alt="Stumble"></a>
+          </div>
+          <div class="col-lg-1">
+            <a href="#"><img src="Assets/social_icons/behance.png" class="mx-auto d-block" alt="Behance"></a>
+          </div>
+          <div class="col-lg-1">
+            <a href="#"><img src="Assets/social_icons/pinterest.png" class="mx-auto d-block" alt="Pintrest"></a>
+          </div>
+          <div class="col-lg-1">
+            <a href="#"><img src="Assets/social_icons/flickr.png" class="mx-auto d-block" alt="Flickr"></a>
+          </div>
+        </div>
+        <div class="col mt-1">
+          <p class="text-center">DELANI STUDIO <br>2022</p>
+        </div>
+      </section>
+    </div>
   </div>
   <script src="JS/main.js"></script>
 </body>
