--- a/index.html
+++ b/index.html
@@ -103,32 +103,72 @@
         <div class="port">
           <h2 class="text-center mt-4">PORTFOLIO</h2>
           <div class="row justify-content-around">
-            <div class="col-lg-3">
-              <img src="Assets/portfolio/work4.jpg" alt="Work" class="w-100 mt-3">
+            <div class="col-lg-3 position-relative">
+              <div class="img">
+                <img src="Assets/portfolio/work4.jpg" alt="Work" class="w-100 mt-3">
+              </div>
+              <div class="overlay mt-3">
+                <h2 class="fw-bold">WILLY <br>WONKA</h2>
+              </div>
             </div>
-            <div class="col-lg-3">
-              <img src="Assets/portfolio/work3.jpg" alt="Work" class="w-100 mt-3">
+            <div class="col-lg-3 position-relative">
+              <div class="img">
+                <img src="Assets/portfolio/work3.jpg" alt="Work" class="w-100 mt-3">
+              </div>
+              <div class="overlay mt-3">
+                <h2 class="fw-bold">WILLY <br>WONKA</h2>
+              </div>
             </div>
-            <div class="col-lg-3">
-              <img src="Assets/portfolio/work2.jpg" alt="Work" class="w-100 mt-3">
+            <div class="col-lg-3 position-relative">
+              <div class="img">
+                <img src="Assets/portfolio/work2.jpg" alt="Work" class="w-100 mt-3">
+              </div>
+              <div class="overlay mt-3">
+                <h2 class="fw-bold">WILLY <br>WONKA</h2>
+              </div>
             </div>
-            <div class="col-lg-3">
-              <img src="Assets/portfolio/work1.jpg" alt="Work" class="w-100 mt-3">
+            <div class="col-lg-3 position-relative">
+              <div class="img">
+                <img src="Assets/portfolio/work1.jpg" alt="Work" class="w-100 mt-3">
+              </div>
+              <div class="overlay mt-3">
+                <h2 class="fw-bold">WILLY <br>WONKA</h2>
+              </div>
             </div>
           </div>
         </div>
           <div class="row justify-content-around">
-            <div class="col-lg-3">
-              <img src="Assets/portfolio/work5.jpg" alt="Work" class="w-100 mt-3">
+            <div class="col-lg-3 position-relative">
+              <div class="img">
+                <img src="Assets/portfolio/work5.jpg" alt="Work" class="w-100 mt-3">
+              </div>
+              <div class="overlay mt-3">
+                <h2 class="fw-bold">WILLY <br>WONKA</h2>
+              </div>
             </div>
-            <div class="col-lg-3">
-              <img src="Assets/portfolio/work6.jpg" alt="Work" class="w-100 mt-3">
+            <div class="col-lg-3 position-relative">
+              <div class="img">
+                <img src="Assets/portfolio/work6.jpg" alt="Work" class="w-100 mt-3">
+              </div>
+              <div class="overlay mt-3">
+                <h2 class="fw-bold">WILLY <br>WONKA</h2>
+              </div>
             </div>
-            <div class="col-lg-3">
-              <img src="Assets/portfolio/work7.jpg" alt="Work" class="w-100 mt-3">
+            <div class="col-lg-3 position-relative">
+              <div class="img">
+                <img src="Assets/portfolio/work7.jpg" alt="Work" class="w-100 mt-3">
+              </div>
+              <div class="overlay mt-3">
+                <h2 class="fw-bold">WILLY <br>WONKA</h2>
+              </div>
             </div>
-            <div class="col-lg-3">
-              <img src="Assets/portfolio/work8.jpg" alt="Work" class="w-100 mt-3">
+            <div class="col-lg-3 position-relative">
+              <div class="img">
+                <img src="Assets/portfolio/work8.jpg" alt="Work" class="w-100 mt-3">
+              </div>
+              <div class="overlay mt-3">
+                <h2 class="fw-bold">WILLY <br>WONKA</h2>
+              </div>
             </div>
           </div>
       </section>
@@ -147,7 +187,7 @@
           </div>
           <!-- <input type="textarea" placeholder="Your message here..." class="w-100 mx-auto d-block put" rows="10"> -->
           <textarea class="form-control put mt-3" placeholder="Your message here..." id="floatingTextarea" rows="10" required></textarea>
-          <div class="text-center">
+          <div class="text-end">
             <button type="button" class="btn mt-3">SEND</button>
           </div>
         </form>
