Ft-Script: Add ids and query hover mouse even.

--- a/index.html
+++ b/index.html
@@ -103,71 +103,71 @@
         <div class="port">
           <h2 class="text-center mt-4">PORTFOLIO</h2>
           <div class="row justify-content-around">
-            <div class="col-lg-3 position-relative">
+            <div class="col-lg-3 position-relative" id="hover">
               <div class="img">
                 <img src="Assets/portfolio/work4.jpg" alt="Work" class="w-100 mt-3">
               </div>
-              <div class="overlay mt-3">
+              <div class="overlay mt-3" id="overlay">
                 <h2 class="fw-bold">WILLY <br>WONKA</h2>
               </div>
             </div>
-            <div class="col-lg-3 position-relative">
+            <div class="col-lg-3 position-relative" id="cursor">
               <div class="img">
                 <img src="Assets/portfolio/work3.jpg" alt="Work" class="w-100 mt-3">
               </div>
-              <div class="overlay mt-3">
-                <h2 class="fw-bold">WILLY <br>WONKA</h2>
+              <div class="overlay mt-3" id="lay">
+                <h2 class="fw-bold">MIGHTY <br>ONTARIO</h2>
               </div>
             </div>
-            <div class="col-lg-3 position-relative">
+            <div class="col-lg-3 position-relative" id="pose">
               <div class="img">
                 <img src="Assets/portfolio/work2.jpg" alt="Work" class="w-100 mt-3">
               </div>
-              <div class="overlay mt-3">
-                <h2 class="fw-bold">WILLY <br>WONKA</h2>
+              <div class="overlay mt-3" id="over">
+                <h2 class="fw-bold">PRISMIC <br>COLORS</h2>
               </div>
             </div>
-            <div class="col-lg-3 position-relative">
+            <div class="col-lg-3 position-relative" id="col">
               <div class="img">
                 <img src="Assets/portfolio/work1.jpg" alt="Work" class="w-100 mt-3">
               </div>
-              <div class="overlay mt-3">
-                <h2 class="fw-bold">WILLY <br>WONKA</h2>
+              <div class="overlay mt-3" id="mount">
+                <h2 class="fw-bold">WATCH <br>BLOGS</h2>
               </div>
             </div>
           </div>
         </div>
           <div class="row justify-content-around">
-            <div class="col-lg-3 position-relative">
+            <div class="col-lg-3 position-relative" id="first">
               <div class="img">
                 <img src="Assets/portfolio/work5.jpg" alt="Work" class="w-100 mt-3">
               </div>
-              <div class="overlay mt-3">
-                <h2 class="fw-bold">WILLY <br>WONKA</h2>
+              <div class="overlay mt-3" id="call">
+                <h2 class="fw-bold">DAYS <br>AHEAD</h2>
               </div>
             </div>
-            <div class="col-lg-3 position-relative">
+            <div class="col-lg-3 position-relative" id="second">
               <div class="img">
                 <img src="Assets/portfolio/work6.jpg" alt="Work" class="w-100 mt-3">
               </div>
-              <div class="overlay mt-3">
-                <h2 class="fw-bold">WILLY <br>WONKA</h2>
+              <div class="overlay mt-3" id="invite">
+                <h2 class="fw-bold">WRIGHT <br>INVERTER</h2>
               </div>
             </div>
-            <div class="col-lg-3 position-relative">
+            <div class="col-lg-3 position-relative" id="third">
               <div class="img">
                 <img src="Assets/portfolio/work7.jpg" alt="Work" class="w-100 mt-3">
               </div>
-              <div class="overlay mt-3">
-                <h2 class="fw-bold">WILLY <br>WONKA</h2>
+              <div class="overlay mt-3" id="arrive">
+                <h2 class="fw-bold">BURNED <br>LLC</h2>
               </div>
             </div>
-            <div class="col-lg-3 position-relative">
+            <div class="col-lg-3 position-relative" id="fourth">
               <div class="img">
                 <img src="Assets/portfolio/work8.jpg" alt="Work" class="w-100 mt-3">
               </div>
-              <div class="overlay mt-3">
-                <h2 class="fw-bold">WILLY <br>WONKA</h2>
+              <div class="overlay mt-3" id="depart">
+                <h2 class="fw-bold">BAILEY <br>WONGER</h2>
               </div>
             </div>
           </div>
