--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <div class="what">
         <h2 class="text-center fs-2">WHAT WE DO</h2>
         <div class="row justify-content-around">
-          <div class="toggle col-lg-3">
-              <div class="paragraph dis mt-3">
+          <div class="toggle col-lg-3" id="toggle-col">
+              <div class="toggle-info dis mt-3">
                 <h3 class="text-center fs-3">DESIGN</h3>
                 <P class="text-center">
                   Our design practice offers a full range of services including brand strategy,
@@ -56,13 +56,13 @@
                   solicit user feedback and work with you to make sure what gets built is what is needed.
                 </p>
               </div>
-              <div class="icon mt-3">
+              <div class="toggle-icon mt-3">
                 <img src="Assets/services_icons/design_icon.png" alt="Icon" class="mx-auto d-block">
                 <p class="text-center">DESIGN</p>
               </div>           
           </div>
-          <div class="tog col-lg-3">
-            <div class="graph dis mt-3">
+          <div class="tog col-lg-3" id="tog-col">
+            <div class="tog-info dis mt-3">
               <h3 class="text-center fs-3">DEVELOPMENT</h3>
               <P class="text-center">
                 All engineers are fluent in the latest enterprise, mobile and web development technologies.
@@ -73,13 +73,13 @@
                 test driven development and pair programming
               </p>
             </div>
-            <div class="con mt-3">
+            <div class="tog-icon mt-3">
               <img src="Assets/services_icons/dev_icon.png" alt="Icon" class="mx-auto d-block">
               <p class="text-center">DEVELOPMENT</p>
             </div>           
         </div>
-        <div class="togg col-lg-3">
-          <div class="para dis mt-3">
+        <div class="togg col-lg-3" id="togg-col">
+          <div class="togg-info dis mt-3">
             <h3 class="text-center fs-3">PRODUCT MANAGEMENT</h3>
             <P class="text-center">
               Planning and development is iterative. Because we are 
@@ -90,7 +90,7 @@
               This iterative process always for changes as business requirements evolve
             </p>
           </div>
-          <div class="ico mt-3">
+          <div class="togg-icon mt-3">
             <img src="Assets/services_icons/product_icon.png" alt="Icon" class="mx-auto d-block">
             <p class="text-center">PRODUCT MANAGEMENT</p>
           </div>           
@@ -107,7 +107,7 @@
               <div class="img">
                 <img src="Assets/portfolio/work4.jpg" alt="Work" class="w-100 mt-3">
               </div>
-              <div class="overlay mt-3" id="overlay">
+              <div class="overlay mt-3">
                 <h2 class="fw-bold">WILLY <br>WONKA</h2>
               </div>
             </div>
@@ -115,7 +115,7 @@
               <div class="img">
                 <img src="Assets/portfolio/work3.jpg" alt="Work" class="w-100 mt-3">
               </div>
-              <div class="overlay mt-3" id="lay">
+              <div class="overlay mt-3">
                 <h2 class="fw-bold">MIGHTY <br>ONTARIO</h2>
               </div>
             </div>
@@ -123,7 +123,7 @@
               <div class="img">
                 <img src="Assets/portfolio/work2.jpg" alt="Work" class="w-100 mt-3">
               </div>
-              <div class="overlay mt-3" id="over">
+              <div class="overlay mt-3">
                 <h2 class="fw-bold">PRISMIC <br>COLORS</h2>
               </div>
             </div>
@@ -131,7 +131,7 @@
               <div class="img">
                 <img src="Assets/portfolio/work1.jpg" alt="Work" class="w-100 mt-3">
               </div>
-              <div class="overlay mt-3" id="mount">
+              <div class="overlay mt-3">
                 <h2 class="fw-bold">WATCH <br>BLOGS</h2>
               </div>
             </div>
@@ -142,7 +142,7 @@
               <div class="img">
                 <img src="Assets/portfolio/work5.jpg" alt="Work" class="w-100 mt-3">
               </div>
-              <div class="overlay mt-3" id="call">
+              <div class="overlay mt-3">
                 <h2 class="fw-bold">DAYS <br>AHEAD</h2>
               </div>
             </div>
@@ -150,7 +150,7 @@
               <div class="img">
                 <img src="Assets/portfolio/work6.jpg" alt="Work" class="w-100 mt-3">
               </div>
-              <div class="overlay mt-3" id="invite">
+              <div class="overlay mt-3">
                 <h2 class="fw-bold">WRIGHT <br>INVERTER</h2>
               </div>
             </div>
@@ -158,7 +158,7 @@
               <div class="img">
                 <img src="Assets/portfolio/work7.jpg" alt="Work" class="w-100 mt-3">
               </div>
-              <div class="overlay mt-3" id="arrive">
+              <div class="overlay mt-3">
                 <h2 class="fw-bold">BURNED <br>LLC</h2>
               </div>
             </div>
@@ -166,7 +166,7 @@
               <div class="img">
                 <img src="Assets/portfolio/work8.jpg" alt="Work" class="w-100 mt-3">
               </div>
-              <div class="overlay mt-3" id="depart">
+              <div class="overlay mt-3">
                 <h2 class="fw-bold">BAILEY <br>WONGER</h2>
               </div>
             </div>
