--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-  <div class="container-fluid">
-    <section class="header d-flex flex-column justify-content-around">
+  <section class="header">
+    <div class="container-fluid d-flex flex-column justify-content-around introduce">
       <div class="message d-flex flex-column">
         <img src="Assets/logo/logo.png" alt="Logo" class="mx-auto d-block">
         <p class="fs-1 text-light text-center">WELCOME</p>
@@ -22,7 +22,9 @@
       <div class="mouse d-flex align-items-bottom">
         <a href="#about" class="mx-auto d-block"><img src="Assets/mouse_click.png" alt="Click"></a>
       </div>
-    </section>
+    </div>
+  </section>
+  <div class="container-fluid">
     <section class="about mt-5 mb-5">
       <div class="info" id="about">
         <h2 class="fw-bold fs-3 text-center">ABOUT US</h2>
@@ -32,14 +34,18 @@
         <p class="text-center">Then we help translate them into effective and elegant solutions.</p>
       </div>
     </section>
-    <section class="services d-flex flex-column justify-content-center">
+  </div>
+  <section class="services">
+    <div class="container d-flex flex-column justify-content-center serve">
       <div class="words">
         <h2 class="fw-bold fs-3 text-center text-light">SERVICES</h2>
         <p class="text-center text-light">Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision</p>
         <p class="text-center text-light">The outcome of this scoping session is proposal or high-level statement of work.</p>
         <p class="text-center text-light">based on your requirements, we can provide a complete offering or just the pieces you need.</p>
       </div>
-    </section>
+    </div>
+  </section>
+  <div class="container-fluid">
     <section class="do mt-5">
       <div class="what">
         <h2 class="text-center fs-2">WHAT WE DO</h2>
@@ -98,137 +104,137 @@
         </div>
       </div>
     </section>
-    <div class="container">
-      <section class="portfolio">
-        <div class="port">
-          <h2 class="text-center mt-4">PORTFOLIO</h2>
-          <div class="row justify-content-around">
-            <div class="col-lg-3 position-relative" id="hover">
-              <div class="img">
-                <img src="Assets/portfolio/work4.jpg" alt="Work" class="w-100 mt-3">
-              </div>
-              <div class="overlay mt-3">
-                <h2 class="fw-bold">WILLY <br>WONKA</h2>
-              </div>
+  </div>
+  <div class="container">
+    <section class="portfolio">
+      <div class="port">
+        <h2 class="text-center mt-4">PORTFOLIO</h2>
+        <div class="row justify-content-around">
+          <div class="col-lg-3 position-relative" id="hover">
+            <div class="img">
+              <img src="Assets/portfolio/work4.jpg" alt="Work" class="w-100 mt-3">
             </div>
-            <div class="col-lg-3 position-relative" id="cursor">
-              <div class="img">
-                <img src="Assets/portfolio/work3.jpg" alt="Work" class="w-100 mt-3">
-              </div>
-              <div class="overlay mt-3">
-                <h2 class="fw-bold">MIGHTY <br>ONTARIO</h2>
-              </div>
+            <div class="overlay mt-3">
+              <h2 class="fw-bold">WILLY <br>WONKA</h2>
             </div>
-            <div class="col-lg-3 position-relative" id="pose">
-              <div class="img">
-                <img src="Assets/portfolio/work2.jpg" alt="Work" class="w-100 mt-3">
-              </div>
-              <div class="overlay mt-3">
-                <h2 class="fw-bold">PRISMIC <br>COLORS</h2>
-              </div>
+          </div>
+          <div class="col-lg-3 position-relative" id="cursor">
+            <div class="img">
+              <img src="Assets/portfolio/work3.jpg" alt="Work" class="w-100 mt-3">
             </div>
-            <div class="col-lg-3 position-relative" id="col">
-              <div class="img">
-                <img src="Assets/portfolio/work1.jpg" alt="Work" class="w-100 mt-3">
-              </div>
-              <div class="overlay mt-3">
-                <h2 class="fw-bold">WATCH <br>BLOGS</h2>
-              </div>
+            <div class="overlay mt-3">
+              <h2 class="fw-bold">MIGHTY <br>ONTARIO</h2>
+            </div>
+          </div>
+          <div class="col-lg-3 position-relative" id="pose">
+            <div class="img">
+              <img src="Assets/portfolio/work2.jpg" alt="Work" class="w-100 mt-3">
+            </div>
+            <div class="overlay mt-3">
+              <h2 class="fw-bold">PRISMIC <br>COLORS</h2>
+            </div>
+          </div>
+          <div class="col-lg-3 position-relative" id="col">
+            <div class="img">
+              <img src="Assets/portfolio/work1.jpg" alt="Work" class="w-100 mt-3">
+            </div>
+            <div class="overlay mt-3">
+              <h2 class="fw-bold">WATCH <br>BLOGS</h2>
             </div>
           </div>
         </div>
-          <div class="row justify-content-around">
-            <div class="col-lg-3 position-relative" id="first">
-              <div class="img">
-                <img src="Assets/portfolio/work5.jpg" alt="Work" class="w-100 mt-3">
-              </div>
-              <div class="overlay mt-3">
-                <h2 class="fw-bold">DAYS <br>AHEAD</h2>
-              </div>
+      </div>
+        <div class="row justify-content-around">
+          <div class="col-lg-3 position-relative" id="first">
+            <div class="img">
+              <img src="Assets/portfolio/work5.jpg" alt="Work" class="w-100 mt-3">
             </div>
-            <div class="col-lg-3 position-relative" id="second">
-              <div class="img">
-                <img src="Assets/portfolio/work6.jpg" alt="Work" class="w-100 mt-3">
-              </div>
-              <div class="overlay mt-3">
-                <h2 class="fw-bold">WRIGHT <br>INVERTER</h2>
-              </div>
-            </div>
-            <div class="col-lg-3 position-relative" id="third">
-              <div class="img">
-                <img src="Assets/portfolio/work7.jpg" alt="Work" class="w-100 mt-3">
-              </div>
-              <div class="overlay mt-3">
-                <h2 class="fw-bold">BURNED <br>LLC</h2>
-              </div>
-            </div>
-            <div class="col-lg-3 position-relative" id="fourth">
-              <div class="img">
-                <img src="Assets/portfolio/work8.jpg" alt="Work" class="w-100 mt-3">
-              </div>
-              <div class="overlay mt-3">
-                <h2 class="fw-bold">BAILEY <br>WONGER</h2>
-              </div>
+            <div class="overlay mt-3">
+              <h2 class="fw-bold">DAYS <br>AHEAD</h2>
             </div>
           </div>
-      </section>
+          <div class="col-lg-3 position-relative" id="second">
+            <div class="img">
+              <img src="Assets/portfolio/work6.jpg" alt="Work" class="w-100 mt-3">
+            </div>
+            <div class="overlay mt-3">
+              <h2 class="fw-bold">WRIGHT <br>INVERTER</h2>
+            </div>
+          </div>
+          <div class="col-lg-3 position-relative" id="third">
+            <div class="img">
+              <img src="Assets/portfolio/work7.jpg" alt="Work" class="w-100 mt-3">
+            </div>
+            <div class="overlay mt-3">
+              <h2 class="fw-bold">BURNED <br>LLC</h2>
+            </div>
+          </div>
+          <div class="col-lg-3 position-relative" id="fourth">
+            <div class="img">
+              <img src="Assets/portfolio/work8.jpg" alt="Work" class="w-100 mt-3">
+            </div>
+            <div class="overlay mt-3">
+              <h2 class="fw-bold">BAILEY <br>WONGER</h2>
+            </div>
+          </div>
+        </div>
+    </section>
+  </div>
+  <section class="form mt-5 d-flex flex-column justify-content-center item-align-center">
+    <div class="container">
+      <form action="https://formspree.io/f/xlezleeg" method="POST" id="mc-embedded-subscribe-form">
+        <h2 class="text-light text-center">CONTACT US</h2>
+        <div class="row">
+          <div class="col-lg-6">
+            <input type="text" placeholder="Name..." class="w-100 put mt-3 form-control text-light" name="name" id="name">
+          </div>
+          <div class="col-lg-6">
+            <input type="email" placeholder="Email..." class="w-100 put mt-3 form-control text-light" name="email" id="email">
+          </div>
+        </div>
+        <!-- <input type="textarea" placeholder="Your message here..." class="w-100 mx-auto d-block put" rows="10"> -->
+        <textarea class="form-control put mt-3 form-control text-light" placeholder="Your message here..." id="message" rows="10" name="message"></textarea>
+        <div class="text-end">
+          <input type="submit" id="submit" value="Submit" class="btn mt-3">
+        </div>
+      </form>
     </div>
-    <section class="form mt-5 d-flex flex-column justify-content-center item-align-center">
-      <div class="container">
-        <form action="https://formspree.io/f/xlezleeg" method="POST">
-          <h2 class="text-light text-center">CONTACT US</h2>
-          <div class="row">
-            <div class="col-lg-6">
-              <input type="text" placeholder="Name..." class="w-100 put mt-3" name="name" required>
-            </div>
-            <div class="col-lg-6">
-              <input type="email" placeholder="Email..." class="w-100 put mt-3" name="email" required>
-            </div>
-          </div>
-          <!-- <input type="textarea" placeholder="Your message here..." class="w-100 mx-auto d-block put" rows="10"> -->
-          <textarea class="form-control put mt-3" placeholder="Your message here..." id="floatingTextarea" rows="10" name="message" required></textarea>
-          <div class="text-end">
-            <button type="submit" class="btn mt-3">SEND</button>
-          </div>
-        </form>
+  </section>
+  <div class="container">
+    <section class="social mt-3">
+      <div class="row justify-content-center align-items-center">
+        <div class="col-lg-1">
+          <a href="#"><img src="Assets/social_icons/twitter.png" alt="Twitter" class="mx-auto d-block"></a>
+        </div>
+        <div class="col-lg-1">
+          <a href="#"><img src="Assets/social_icons/dribble.png" class="mx-auto d-block" alt="Dribble"></a>
+        </div>
+        <div class="col-lg-1">
+          <a href="#"><img src="Assets/social_icons/facebook.png" class="mx-auto d-block" alt="Facebook"></a>
+        </div>
+        <div class="col-lg-1">
+          <a href="#"><img src="Assets/social_icons/g_plus.png" class="mx-auto d-block" alt="Gmail"></a>
+        </div>
+        <div class="col-lg-1">
+          <a href="#"><img src="Assets/social_icons/skype.png" class="mx-auto d-block" alt="Skype"></a>
+        </div>
+        <div class="col-lg-1">
+          <a href="#"><img src="Assets/social_icons/stumble_upon.png" class="mx-auto d-block" alt="Stumble"></a>
+        </div>
+        <div class="col-lg-1">
+          <a href="#"><img src="Assets/social_icons/behance.png" class="mx-auto d-block" alt="Behance"></a>
+        </div>
+        <div class="col-lg-1">
+          <a href="#"><img src="Assets/social_icons/pinterest.png" class="mx-auto d-block" alt="Pintrest"></a>
+        </div>
+        <div class="col-lg-1">
+          <a href="#"><img src="Assets/social_icons/flickr.png" class="mx-auto d-block" alt="Flickr"></a>
+        </div>
+      </div>
+      <div class="col mt-1">
+        <p class="text-center">DELANI STUDIO <br>2022</p>
       </div>
     </section>
-    <div class="container">
-      <section class="social mt-3">
-        <div class="row justify-content-center align-items-center">
-          <div class="col-lg-1">
-            <a href="#"><img src="Assets/social_icons/twitter.png" alt="Twitter" class="mx-auto d-block"></a>
-          </div>
-          <div class="col-lg-1">
-            <a href="#"><img src="Assets/social_icons/dribble.png" class="mx-auto d-block" alt="Dribble"></a>
-          </div>
-          <div class="col-lg-1">
-            <a href="#"><img src="Assets/social_icons/facebook.png" class="mx-auto d-block" alt="Facebook"></a>
-          </div>
-          <div class="col-lg-1">
-            <a href="#"><img src="Assets/social_icons/g_plus.png" class="mx-auto d-block" alt="Gmail"></a>
-          </div>
-          <div class="col-lg-1">
-            <a href="#"><img src="Assets/social_icons/skype.png" class="mx-auto d-block" alt="Skype"></a>
-          </div>
-          <div class="col-lg-1">
-            <a href="#"><img src="Assets/social_icons/stumble_upon.png" class="mx-auto d-block" alt="Stumble"></a>
-          </div>
-          <div class="col-lg-1">
-            <a href="#"><img src="Assets/social_icons/behance.png" class="mx-auto d-block" alt="Behance"></a>
-          </div>
-          <div class="col-lg-1">
-            <a href="#"><img src="Assets/social_icons/pinterest.png" class="mx-auto d-block" alt="Pintrest"></a>
-          </div>
-          <div class="col-lg-1">
-            <a href="#"><img src="Assets/social_icons/flickr.png" class="mx-auto d-block" alt="Flickr"></a>
-          </div>
-        </div>
-        <div class="col mt-1">
-          <p class="text-center">DELANI STUDIO <br>2022</p>
-        </div>
-      </section>
-    </div>
   </div>
   <script src="JS/main.js"></script>
 </body>
